--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-    <TextView
+        android:layout_height="fill_parent"
+        android:background="@drawable/playstore_icon"  >
+        <TextView
             android:id="@+id/text"
             android:textColor="?android:textColorPrimary"
             android:textSize="17sp"
