--- a/res/layout/quote.xml
+++ b/res/layout/quote.xml
@@ -3,16 +3,20 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="@drawable/playstore_icon" 
         android:padding="5dp">
     <TextView
             android:id="@+id/quote"
             android:textSize="35sp"
+            android:textStyle="bold"
             android:textColor="?android:textColorPrimary"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" 
+            />
     <TextView
             android:id="@+id/location"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="?android:textColorSecondary"
             android:paddingTop="10dp"
             android:layout_width="wrap_content"
